# Decodium3-Android

./: .gitignore  CMakeLists.txt  Configuration.cpp  Configuration.hpp  Configuration.ui  DisplayManual.cpp  Logger.hpp  MetaDataRegistry.cpp  PrecisionTime.hpp  README.md  Radio.cpp  RadioMetaType.cpp  commons.h  helper_functions.cpp  killbyname.cpp  main.cpp  qml.qrc  qt_helpers.cpp  qt_helpers.hpp  revision_utils.cpp  scs_version.h
Audio/: BWFFile.cpp  NetworkAudioInput.cpp  NetworkAudioOutput.cpp  soundin.cpp  soundin.h  soundout.cpp  soundout.h
Audio/tools/: record_time_signal.cpp
CMake/Modules/: FindFFTW3.cmake
Decoder/: decodedtext.cpp
Modulator/: Modulator.cpp
Network/: Cloudlog.cpp  FileDownload.cpp  FoxVerifier.cpp  LotWUsers.cpp  MessageClient.cpp  MessageClient.hpp  NetworkMessage.cpp  NetworkMessage.hpp  NtpClient.cpp  NtpClient.hpp  PSKReporter.cpp  wsprnet.cpp
SampleDownloader/: DirectoryNode.hpp  RemoteFile.cpp
Transceiver/: DXLabSuiteCommanderTransceiver.cpp  HRDTransceiver.cpp  HRDTransceiver.hpp  OmniRig.h  TCITransceiver.cpp
android/: AndroidManifest.xml
android/res/drawable/: icon.xml
android/res/values/: styles.xml
android/res/xml/: network_security_config.xml
bridge/: AudioCapture.cpp  AudioCapture.hpp  AudioPlayback.cpp  AudioPlayback.hpp  BridgeServer.cpp  BridgeServer.hpp  CMakeLists.txt  CatRelay.cpp  CatRelay.hpp  DiscoveryService.cpp  main.cpp
controllers/: AppController.cpp  AppController.hpp  AudioController.cpp  AudioController.hpp  DecodeListModel.cpp  DecodeListModel.hpp  DecoderController.cpp  DecoderController.hpp  LogController.cpp  LogController.hpp  RadioController.cpp  TxController.cpp  TxController.hpp  WaterfallController.cpp  WaterfallController.hpp
item_delegates/: MessageItemDelegate.cpp  SQLiteDateTimeDelegate.cpp
lib/: char.h  decoder.f90  ft2_decode.f90
lib/ft2/: foxfiltft2.f90  foxgenft2.f90  ft2_baseline.f90  ft2_decode.f90  ft2_params.f90  gen_ft2wave.f90  genft2.f90  get_ft2_bitmetrics.f90  subtractft2.f90  sync2d.f90
lib/ft8var/: encode174_91var.f90  four2avar.f90  osd174_91var.f90
logbook/: AD1CCty.cpp  WorkedBefore.cpp  countriesworked.cpp  countriesworked.h  logbook.cpp
models/: Bands.cpp  CabrilloLog.cpp  FoxLog.cpp  FrequencyList.cpp  IARURegions.cpp  Modes.cpp  Modes.hpp  StationList.cpp
prebuilt/: README.md
prebuilt/scripts/: Dockerfile.arm64  android_compat.c  build_android_arm64.ps1  build_android_arm64.sh  build_arm64_windows.sh  ci_build_arm64.yml  crc_standalone.c  omp_lib_stub.f90
qml/: Theme.qml  main.qml  qml.qrc
qml/components/: CountdownTimer.qml  DecodeLine.qml  HeaderBar.qml
qml/dialogs/: LogQSODialog.qml  SettingsDialog.qml
qml/panels/: BottomToolbar.qml  StatusBar.qml  WaterfallPanel.qml
qmlitems/: WaterfallItem.cpp  WaterfallItem.hpp
validators/: LiveFrequencyValidator.cpp  LiveFrequencyValidator.hpp
widgets/: DateTimeEdit.hpp  displaytext.cpp  plotter.cpp
